--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,9 @@ body {
   background-color: bisque;
 }
 
-h1, h2 {text-align: center;}
+h1, h2 {text-align: center; margin-left: 10px;}
 
-p, input {font-size: 1.1em}
+p, input, select {font-size: 1.1em; margin-left: 10px;}
 
 .headerP {
   font-size: 1.1em;
@@ -49,7 +49,6 @@ button:hover {
 }
 
 footer {
-  padding: 0 0.5em;
   border-top: 2px solid #ccc;
 }
 
