--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 body {
   overflow-y: scroll;
   font-family: Serif, Sans-serif;
-  width: 60vw;
+  width: 50vw;
   margin: auto;
   line-height: 1.5;
 }
@@ -17,9 +17,15 @@ body {
   background-color: bisque;
 }
 
-h1, h2 {text-align: center; margin-left: 10px;}
+h1, h2 {
+  text-align: center;
+  margin: 5px 10px;
+}
 
-p, input, select {font-size: 1.1em; margin-left: 10px;}
+p, input, select {
+  font-size: 1.1em;
+  margin: 5px 10px;
+}
 
 .headerP {
   font-size: 1.1em;
@@ -51,9 +57,10 @@ button:hover {
 
 footer {
   border-top: 2px solid #ccc;
+  margin: 5px 10px;
 }
 
-#crp-stats {
+#perfReport {
   float: right;
   font-style: italic;
 }
